<resources>
    <string name="app_name">TinderCloneApp</string>
    <string name="registration">Регистрация</string>
    <string name="enter">Войти</string>
    <string name="enter_errors">Проблемы со входом?</string>
    <string name="enter_google">Войти через гугл аккаунт</string>
    <string name="enter_email">Войти через Email</string>
    <string name="enter_number">Войти через номер телефона</string>
    <string name="my_number">Мой номер</string>
    <string name="next_btn">Продолжить</string>
    <string name="my_code">Мой код</string>
    <string name="my_email">Какой у тебя електронный адрес</string>
    <string name="my_password">Придумай себе пароль</string>
    <string name="my_email_hint">Не потеряй доступ к своему аккаунту, подтверди свою почту</string>
    <string name="my_password_hint">Обезопасьте себя защищенным паролем</string>
    <string name="register_email_hint">Введите почту</string>
    <string name="register_password_hint">Введите пароль</string>
    <string name="register_confirm_password_hint">Подтвердите пароль</string>
    <string name="my_name">Мое имя</string>
    <string name="my_name_hint">Так к вам будут обращаться пользователи</string>
    <string name="register_name_hint">Введите свое имя</string>
    <string name="my_birthday">Моя дата рождения</string>
    <string name="birthday_hint_dmy">ДД/ММ/ГГГГ</string>
    <string name="my_birthday_hint">Ваш возраст будут видеть пользователи</string>
    <string name="email_error">Ошибка ввода email</string>
    <string name="incorrect_password_error">Некоректный пароль</string>
    <string name="passwords_dont_match_error">Пароли не совпадают</string>
    <string name="password_symbols_error">Пароль должен содержать более 7 символов</string>
    <string name="email_registered_error">Данная почта уже зарегестрирована</string>
    <string name="number_registered_error">Вы не ввели номер телефона</string>
    <string name="name_registered_error">Ошибка ввода имени пользователя</string>
    <string name="activate_location">Активировать локацию</string>
    <string name="activate_location_hint">Тебе нужно активировать локацию, чтоб пользоваться</string>
    <string name="more">Расскажите больше</string>
    <string name="not_now">Не сейчас</string>
    <string name="notifications_button">Включить оповещения</string>
    <string name="notifications">Держите меня в курсе событий</string>
    <string name="notifications_hint">Узнай, когда получишь новую пару или оповещение</string>
    <string name="location_agree">Разрешить локацию</string>
    <string name="add_photo">Добавить фото</string>
    <string name="settings">Настройки</string>
    <string name="top_asks">Топ предложений</string>
    <string name="change_data">Изменить данные</string>
    <string name="gold_advertisement">Перейди на GOLD, чтоб узнать кто поставил тебе лайк.</string>
    <string name="who_likes">Узнай кому ты понравился</string>
    <string name="messages_intro">Когда получаются пары с другими пользователями, они появляются здесь, где ты можешь их увидеть.</string>
    <string name="messages_start">Начни листать</string>
    <string name="gold_top_ads">Перейди на Gold, чтоб получить больше Топ предложений</string>
    <string name="gold_like_ads">Перейди на Gold, чтоб узнать кто поставил тебе Лайк</string>
    <string name="edit">Редактировать</string>
    <string name="about_text">Напишите пару слов о себе</string>
    <string name="view">Просмотр</string>
    <string name="save">Сохранить</string>
    <string name="password">Пароль</string>
    <string name="number">Номер телефона</string>
    <string name="email">Електронный адрес</string>
    <string name="profile_settings">Настройки учетной записи</string>
    <string name="exit">Выйти</string>
    <string name="sign_out">Выйти из учетной записи</string>
    <string name="max_length">Максимальное расстояние</string>
    <string name="age_radius">Возрастной диапазон</string>

</resources>
