<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdditionalRegistration.NameActivity">
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:indeterminate="true"
        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
        />

<LinearLayout
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_alignParentTop="true">

    <TextView
        android:id="@+id/nameTextView"
        style="@style/BigTextViewStyle"
        android:text="@string/my_name"
        android:layout_gravity="center"
        />
    <TextView
        style="@style/HintTextViewStyle"
        android:id="@+id/nameHint"
        android:layout_below="@id/nameTextView"
        android:text="@string/my_name_hint"
        />

    <EditText
        android:id="@+id/registerNameEditText"
        android:layout_below="@id/nameHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@drawable/bottom_stroke"
        android:hint="@string/register_name_hint"
        android:textSize="10pt"
        android:singleLine="true"
        android:layout_marginHorizontal="30dp"
        android:padding="5dp"
        />

    <TextView
        style="@style/ErrorTextViewStyle"
        android:id="@+id/errorName"
        android:text="Имя не введено"
        android:visibility="invisible"
        />

</LinearLayout>
    <Button
        style="@style/ButtonRegisterStyle"
        android:textColor="@drawable/change_text_color"
        android:background="@drawable/custom_button_next"
        android:id="@+id/registerNameBtn"
        android:text="@string/next_btn"
        android:layout_below="@id/layout"
         />

</RelativeLayout>