<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Registration.PasswordActivity"
        >
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:indeterminate="true"
        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
        />
        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true">

            <TextView
                style="@style/BigTextViewStyle"
                android:layout_marginHorizontal="30dp"
                android:id="@+id/myEmailIs"
                android:text="@string/my_password"
                />

            <TextView
                style="@style/HintTextViewStyle"
                android:id="@+id/emailHint"
                android:text="@string/my_password_hint"
                android:layout_marginHorizontal="30dp"
                />

            <EditText
                android:id="@+id/registerPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@drawable/bottom_stroke"
                android:hint="@string/register_password_hint"
                android:inputType="textPassword"
                android:textSize="9pt"
                android:singleLine="true"
                android:layout_marginHorizontal="30dp"
                android:padding="3dp"
                android:layout_marginBottom="25dp"/>

            <EditText
                android:id="@+id/registerConfirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@drawable/bottom_stroke"
                android:hint="@string/register_confirm_password_hint"
                android:textSize="9pt"
                android:singleLine="true"
                android:inputType="textPassword"
                android:layout_marginHorizontal="30dp"
                android:padding="3dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                style="@style/ErrorTextViewStyle"
                android:id="@+id/errorPassword"
                android:text="Пароли не совпадают"
                android:visibility="invisible"
                />

        </LinearLayout>
    <Button
        style="@style/ButtonRegisterStyle"
        android:textColor="@drawable/change_text_color"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_button_next"
        android:id="@+id/passwordNextButton"
        android:text="@string/next_btn"
        android:layout_below="@id/layout"/>

    </RelativeLayout>

