<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tindercloneapp.MainWindows.ProfileWindowFragment"
    android:background="@color/background_gray"
    android:paddingTop="40dp"
    android:paddingHorizontal="15dp">


        <LinearLayout
            android:id="@+id/photoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="15dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userProfilePhoto"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/photo1"
                    />
                <TextView
                    android:id="@+id/nameAgeProfileTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name, 19"
                    android:layout_gravity="center_horizontal"
                    android:textSize="30dp"
                    android:layout_marginVertical="10dp"
                    android:textColor="#484848"
                        />

                <TextView
                    android:id="@+id/bioProfileTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mechnikovs Odessa National University"
                    android:layout_gravity="center_horizontal"
                    android:textSize="15dp"
                    android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profileButtonsLayout"
            android:layout_below="@id/photoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="15dp">
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/settingsButton"
                            android:src="@drawable/settings"
                            app:civ_circle_background_color="@color/white"

                            android:layout_width="match_parent"
                            android:layout_height="60dp"/>
                        <TextView
                            android:id="@+id/settingsText"
                            style="@style/ProfileGrayTextStyle"
                                android:text="@string/settings"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="20dp">
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/addPhotosButton"
                            android:src="@drawable/add_photo"
                            app:civ_circle_background_color="@color/mainColor"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"/>
                        <TextView
                            android:id="@+id/addPhotosText"
                            style="@style/ProfileGrayTextStyle"
                            android:text="@string/add_photo"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="15dp">
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/editProfile"
                            android:src="@drawable/edit_profile"
                            app:civ_circle_background_color="@color/white"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"/>
                        <TextView
                            android:id="@+id/editProfileText"
                            style="@style/ProfileGrayTextStyle"
                            android:text="@string/change_data"/>

                </LinearLayout>



        </LinearLayout>





</RelativeLayout>